# pypi-package-starter

./: .gitignore  LICENSE.txt  README.md  build.sh  pyproject.toml
.github/workflows/: test-package.yml
package/: __init__.py
tests/: test_add.py
