[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "package"
version = "0.0.1"
description = 'This is the description of the package'
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = []
authors = [{ name = "Rocktim Saikia", email = "rocktimthedev@gmail.com" }]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
homepage = "https://github.com/rocktimsaikia/package"
repository = "https://github.com/rocktimsaikia/package"
issues = "https://github.com/rocktimsaikia/package/issues"
